SALESFORCE/force-apps/deploy/main/default/objects/Course_X_Delivery__c/Course_X_Delivery__c.object-meta.xml
<CustomObject>
    <label>Course_X_Delivery</label>
    <nameField>
        <displayFormat>CxD-{0000}</displayFormat>
        <label>Course_X_Delivery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses_X_Delivery</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>