SALESFORCE/force-apps/deploy/main/default/objects/Course_X_Delivery__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Courses_X_Deliveries</relationshipLabel>
    <relationshipName>Courses_X_Deliveries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>