SALESFORCE/force-apps/deploy/main/default/objects/Course_X_Delivery__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <label>Delivery</label>
    <referenceTo>Delivery__c</referenceTo>
    <relationshipLabel>Courses_X_Deliveries</relationshipLabel>
    <relationshipName>Courses_X_Deliveries</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>